manifest/admissionregistration.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: deployment-mutation
webhooks:
  - name: "deployment-mutation.default.svc"
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values: [ "default" ]
    rules:
      - operations: [ "CREATE"]
        apiGroups: [ "apps" ]
        apiVersions: [ "v1" ]
        resources: [ "deployments" ]
        scope: "Namespaced"
    clientConfig:
      service:
        namespace: default
        name: poc-admission-controller
        path: "/mutate"
      caBundle: ${ENCODED_CA}
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
